Devops-Notes/Grafana-PrometheusDeployment/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: first-deployment
  name: first-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: first-deployment
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        resources: {}
status: {}
